[project]
name = "db-backup-management"
version = "0.1.0"
description = "A database backup management tool with cloud storage and notifications support"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "sid150"}
]

dependencies = [

    "SQLAlchemy >= 2.0.43",
    "PyMySQL >= 1.1.2",
    
    # Cloud storage providers
    "boto3 >= 1.34.0",              
    "google-cloud-storage >= 2.14.0", 
    "azure-storage-blob >= 12.19.0",  
    
    # Notifications
    "requests >= 2.31.0",          
    
    # Environment and configuration
    "python-dotenv >= 1.0.0",       
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.4.4",
    "black >= 24.1.0",
    "flake8 >= 7.0.0",
    "mypy >= 1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.scripts]
db-backup = "src.cli:main"
